# random-notes-synth1

./: Cargo.toml  similar_code.rs
src/: main.rs
