[package]
name = "synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.12"
hound = "3.4"
ringbuf = "0.2"
clap = { version = "3.1", default-features = false, features = ["std"] }
cpal = "0.13.5"
rand_xoshiro = "0.6.0"